--- a/downloaderMusic/downloaderMusic.csproj
+++ b/downloaderMusic/downloaderMusic.csproj
@@ -8,6 +8,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="CommandLineParser" Version="2.9.1" />
       <PackageReference Include="DotNetEnv" Version="3.1.1" />
       <PackageReference Include="NAudio" Version="2.2.1" />
       <PackageReference Include="NAudio.Lame" Version="2.1.0" />
